# create-mini-lisp

./: .editorconfig  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
.github/workflows/: pages.yml
cmake.apple-clang.vscode/: launch.json
cmake.mingw.vscode/: c_cpp_properties.json  launch.json
cmake.msvc.vscode/: launch.json
configs/: .clang-format  CMakeLists.txt  xmake.lua
public/clion/: .name  modules.xml
public/cmake.apple-clang.vscode/: c_cpp_properties.json  tasks.json
public/cmake.mingw.vscode/: launch.json  tasks.json
public/cmake.msvc.vscode/: c_cpp_properties.json  launch.json  tasks.json
public/configs/: .editorconfig  .gitignore  CMakeLists.txt  xmake.lua
public/github/: judge-other.yml  judge-vs.yml
public/readme/: cmake-install.md  compiler.md  install-cmake.md  install-vs.md  install-xmake.md  prepare-clion.md  prepare-vs.md  prepare-vscode-cmake.md  prepare-vscode-xmake.md  run-clion.md  run-vs.md  run-vscode.md  xmake-install.md
public/src/: main.cpp  rjsj_test.hpp  token.cpp  token.h  tokenizer.cpp
public/vs/: mini-lisp.sln  mini-lisp.vcxproj  mini-lisp.vcxproj.filters
public/xmake.msvc.vscode/: launch.json
readme/: prepare-clion.md  prepare-vs.md  prepare-vscode-cmake.md  prepare-vscode-xmake.md  vs-install.md  vs-run.md
src/: App.tsx  generate.ts  index.css
vs/: mini-lisp.sln  mini-lisp.vcxproj  mini-lisp.vcxproj.filters
xmake.apple-clang.vscode/: launch.json  tasks.json
xmake.mingw.vscode/: launch.json  tasks.json
xmake.msvc.vscode/: c_cpp_properties.json  launch.json  tasks.json
(+1 files in other folders)
